========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-02

  - Fixed #193: Removed the broken Google Finance price source importer. Google
    has removed this service in the favor of a special Search page and this has
    been broken for the recent little while.

  - Fixed #203: Updated the Yahoo price source implementation to use the
    undocumented v7 and v8 APIs; moved away from the "ichart" and "download"
    APIs. The Yahoo importer is back in function.

    This introduced a new dependency on the awesome 'requests' library, which
    really, was quite inevitable).


2018-04-01

  - Merged PR65: Use parse_version to compare versions; then replicated
    parse_version() locally to avoid the dependency on setuptools.

  - Merged PR15 by Johannes Harms:
    Added the following features to the forecasting plugin:
    - Yearly repetition of recurring transactions (instead of just monthly)
    - Users may optionally specify an end date
    - Users may optionally specify the number of repetitions
    "I used this code to calculate scenarios for a possible real estate purchase
    and I contribute a cleaned-up version as an example file."

  - Merged PR54 & Fixed #232: Align quoted commodities correctly in ledger price
    statements (from Martin Michlmayr).

  - Merged PR57: query_execute: Allow ordering by columns which may be None
    (from Jakob Schnitzer). Made some adjustments to generalize on all
    datatypes.

  - Merged PR62: Also allow 0/0 in SAFEDIV() (from Jakob Schnitzer), with small
    adjustments to catch only the specific invalid operations on Decimal.

  - Merged PR64 from yagebu@ (Jakob Schnitzer), which makes the Inventory class
    rely on the fact that Position is immutable in order to avoid unnecessary
    copies. This yields an 18% speedup with no difference.

  - Removed unused and invalid mutating method Position.set_units(). Amazing