@@ -181,6 +181,11 @@ is great for sectioning large files with many transactions.
   ;; Default to `;;' in comment-region.
   (set (make-local-variable 'comment-add) 1)
 
+  ;; Org-mode sets both of these to `org-comment-or-uncomment-region',
+  ;; which doesn't know about our ";" comments.
+  (kill-local-variable 'comment-region-function)
+  (kill-local-variable 'uncomment-region-function)
+
   ;; No tabs by default.
   (set (make-local-variable 'indent-tabs-mode) nil)
 
