@@ -4,6 +4,12 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-04-03
+
+  - Fixed Emacs functionality to uncomment regions (change submitted by Stefan
+    Monnier on the list).
+
+
 2018-04-02
 
   - Fixed #193: Removed the broken Google Finance price source importer. Google
